# lawkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_TEST_COVERAGE_REPORT.md  LICENSE  README.ar.md  README.hi.md  README.ja.md  README.md  README.zh.md  README_ja.md  README_zh.md  ci-local.sh  cliff.toml  gh_result.txt  publish-all.sh  temp_test.csv  test-python-api.py  unified_output.txt
.claude/: BENF_ARCHITECTURE.md  BENF_DEVELOPMENT.md  BENF_FEATURES.md  BENF_MIGRATION_PLAN.md  CLAUDE.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_FEATURES.md  LAWKIT_IMPLEMENTATION_PLAN.md  LAWKIT_INTEGRATION.md  LAWKIT_STRATEGY.md  NORMAL_ARCHITECTURE.md  PARETO_ARCHITECTURE.md  PARETO_FEATURES.md  POISSON_ARCHITECTURE.md  POISSON_FEATURES.md  ZIPF_ARCHITECTURE.md  international_numerals_research.md  lawkit-architecture.md  normal-features.md  release-guide.md  settings.local.json  tasks.md  zipf-features.md
.claude/reboot/: ground-truth.md  problem-analysis.md  reboot-plan.md
.github/: branch-protection.json  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: benchmark.yml  ci.yml  release-act1.yml  release-act2.yml  release-old.yml.disabled  release.yml
benf/: Cargo.toml  README.md
benf-standalone/: Cargo.toml  README.md
benf-standalone/src/: main.rs
benf/src/: main.rs
docs/: api-reference.md  ci-cd.md  faq_ja.md  index.md  index_ja.md  index_zh.md  usage.md
docs/bindings/: unified-api.md  unified-api_ja.md  unified-api_zh.md
docs/examples/: README_ja.md
docs/guides/: advanced-analysis.md  advanced-analysis_ja.md  advanced-analysis_zh.md  architecture.md  architecture_ja.md  architecture_zh.md  integrations.md  integrations_ja.md  integrations_zh.md  performance.md  performance_ja.md  performance_zh.md
docs/project/: changelog.md  changelog_ja.md  changelog_zh.md  roadmap.md  roadmap_ja.md  roadmap_zh.md
docs/reference/: api-reference.md  api-reference_ja.md  api-reference_zh.md  cli-reference.md  cli-reference_ja.md  cli-reference_zh.md
docs/specs/: cli.md  core.md
docs/user-guide/: configuration.md  configuration_ja.md  configuration_zh.md  examples.md  examples_ja.md  examples_zh.md  faq.md  faq_ja.md  faq_zh.md  getting-started.md  getting-started_ja.md  getting-started_zh.md  installation.md  installation_ja.md  installation_zh.md  usage.md  usage_ja.md  usage_zh.md
lawkit-cli/: Cargo.toml
lawkit-cli/src/: colors.rs  common_options.rs  lib.rs  main.rs  run.rs
lawkit-cli/src/subcommands/: analyze.rs  benf.rs  compare.rs  compare_common.rs  diagnose.rs  integration_common.rs  mod.rs  normal.rs  pareto.rs  poisson.rs  validate.rs  zipf.rs
lawkit-cli/tests/: document_exact_examples.rs  lawkit_subcommands.rs  lib.rs  optimization_threshold_tests.rs  verbose_output_tests.rs
lawkit-cli/tests/cmd/: benford.md  generate.md  normal.md  options.md  output.md  pareto.md  poisson.md  zipf.md
lawkit-cli/tests/spec/: exit_codes.rs  formats.rs  generate.rs  mod.rs  options.rs  output.rs  subcommands.rs
lawkit-core/: Cargo.toml
lawkit-core/benches/: law_benchmark.rs
lawkit-core/src/: diffx_core_mock.rs  error.rs  helpers.rs  lib.rs  parsers.rs  types.rs
lawkit-core/tests/: fixtures.rs  getting_started_examples.rs  lib.rs  test_unified_api.rs
lawkit-js/: .npmignore  STRUCTURE.md  examples.ts  index.js  lib.js  package.json  publish.md  verify-package.js
lawkit-js/scripts/: download-all-binaries.js
lawkit-js/src/: lib.rs
lawkit-js/tests/: test-unified-api.test.js
lawkit-npm/: README.md  STRUCTURE.md  examples.js  index.js  lib.js  package-lock.json  package.json  publish.md  test.js
lawkit-npm/scripts/: download-all-binaries.js  download-binary.js
lawkit-npm/tests/: cli.test.js  errors.test.js
lawkit-python/: Cargo.toml  PACKAGE_SUMMARY.md  README.md  STRUCTURE.md  pyproject.toml  verify_package.py
lawkit-python/diffx-python/: Cargo.toml  pyproject.toml
lawkit-python/src/: lib.rs
lawkit-python/tests/: __init__.py  usage_examples.py
mnt/: rust-cli-kiln
pareto/: Cargo.toml  README.md
pareto-standalone/: Cargo.toml  README.md
pareto-standalone/src/: main.rs
pareto-standalone/test-npm-real/: package.json
pareto/src/: main.rs
release-assets/: benf-v2.2.0-linux-x86_64  pareto-v2.2.0-linux-x86_64
scripts/: README.md  capture_unified_output.sh  check-docs-consistency.sh  check-versions.sh  ci-local.sh  publish-all.sh  publish-npm.sh  publish-pypi.sh  setup-github-workflow.sh  test-published-packages.sh
scripts/release/: 00-pre-release-check.sh  01-check-published-versions.sh  02-update-version.sh  03-check-local-versions.sh  06-create-release-tag.sh  07-monitor-release.sh  cleanup-failed-release.sh
scripts/testing/: 04-pre-release-test-act1.sh  05-pre-release-test-act2.sh  08-test-published-packages.sh  ci-local.sh  quick-check.sh  test-published-packages.sh
scripts/utils/: capture_full_output.sh  capture_output.sh  check-docs-consistency.sh  check-versions.sh  create-github-shared-symlink.sh  create-rust-cli-kiln-symlink.sh  setup-github-workflow.sh
src/: error.rs  lib.rs  main.rs
src/common/: international.rs  mod.rs  statistics.rs
src/core/: filtering.rs  international.rs  japanese.rs  mod.rs
src/input/: file_detector.rs  mod.rs  parser.rs
src/laws/: mod.rs
src/output/: formatter.rs
src/subcommands/: benf.rs  compare.rs  mod.rs  normal.rs  pareto.rs  poisson.rs  zipf.rs
test-npm-real/: package-lock.json  package.json  test-js-api.js
tests/: filtering_integration_tests.rs  http_options_tests.rs  integration_tests.rs  lib.rs  mod.rs
tests/basic/: benford_calculations.rs  japanese_numerals.rs  mod.rs  number_extraction.rs  risk_assessment.rs
tests/cli/: basic_benford_calculations.rs  basic_commands.rs  basic_international_numerals.rs  basic_japanese_numerals.rs  basic_number_extraction.rs  basic_risk_assessment.rs  document_exact_examples.rs  errors_edge_cases.rs  errors_handling.rs  features_benford_analysis.rs  features_zipf_analysis.rs  (+16 more)
to-migrate/: README.md
(+246 files in other folders)
