[package]
name = "lawkit"
version = "2.0.0"
edition = "2024"
authors = ["kako-jun"]
license = "MIT"
description = "Statistical law analysis toolkit with international number support"
homepage = "https://github.com/kako-jun/benf"
repository = "https://github.com/kako-jun/benf"
keywords = ["statistics", "benford", "pareto", "zipf", "audit", "fraud-detection"]
categories = ["command-line-utilities", "mathematics"]

[[bin]]
name = "lawkit"
path = "src/main.rs"

[[bin]]
name = "benf"
path = "src/bin/benf.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
scraper = "0.17"
calamine = "0.22"
pdf-extract = "0.7"
docx-rs = "0.4"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
regex = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
pretty_assertions = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"