[package]
name = "benf"
version = "2.5.16"
edition = "2021"
authors = ["kako-jun <3541096+kako-jun@users.noreply.github.com>"]
description = "Benford's Law analysis CLI - convenience wrapper for lawkit benf"
license = "MIT"
repository = "https://github.com/kako-jun/lawkit"
homepage = "https://github.com/kako-jun/lawkit"
documentation = "https://docs.rs/benf"
readme = "README.md"
keywords = ["benford", "statistics", "fraud-detection", "analysis", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "benf"
path = "src/main.rs"

[dependencies]
lawkit-core = { path = "../lawkit-core", version = "2.5.16" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
