[package]
name = "lawkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Statistical law analysis CLI toolkit with international number support"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[lib]
name = "lawkit_python"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lawkit"
path = "src/main.rs"

[[bin]]
name = "benf"
path = "src/bin/benf.rs"

[[bin]]
name = "pareto"
path = "src/bin/pareto.rs"

[dependencies]
lawkit-core = { version = "2.5.16", path = "../lawkit-core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
owo-colors = "4.1"
is-terminal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
assert_cmd = { workspace = true }

# Integration tests configuration
[[test]]
name = "basic"
path = "../tests/basic/mod.rs"

[[test]]
name = "cli"
path = "../tests/cli/mod.rs"

[[test]]
name = "core"
path = "../tests/core/mod.rs"

[[test]]
name = "docs_examples"
path = "../tests/docs_examples/mod.rs"

[[test]]
name = "errors"
path = "../tests/errors/mod.rs"

[[test]]
name = "features"
path = "../tests/features/mod.rs"

[[test]]
name = "formats"
path = "../tests/formats/mod.rs"