[workspace]

[package]
name = "pareto"
version = "2.1.1"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "Pareto Principle (80/20 rule) analysis CLI - convenience wrapper for lawkit pareto"
homepage = "https://github.com/kako-jun/lawkit"
repository = "https://github.com/kako-jun/lawkit"
documentation = "https://docs.rs/lawkit-core"
readme = "README.md"
keywords = ["pareto", "80-20-rule", "statistics", "business-analysis", "lawkit"]
categories = ["command-line-utilities", "mathematics", "science"]
rust-version = "1.75"

[[bin]]
name = "pareto"
path = "src/main.rs"

[dependencies]
# No dependencies - this is a lightweight wrapper that calls lawkit